# pyrung

./: .copier-answers.yml  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  dead-code-audit.md  development.md  mkdocs.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
bench/: bench.prof
devtools/: build_release_assets.py  check_webview_scripts.js  coverage_program.py  diagnose_prove_soundness.py  diagnose_reproducer.py  dump_ladder.py  extract_tag_map_nickname_io.py  generate_circuitpy_example.py  lint.py  mpy-cross-linux-amd64-8.2.3.static  semantic_lint.py  serial_monitor.py  split_circuitpy_compile_module.py  split_fixture.py  split_program_context_module.py  split_send_receive_module.py  split_tag_map_module.py
docs/: CLAUDE.md  clickplc_dsl_original.md  dsl.md  dsl_part1.md  dsl_part2.md  gen_reference.py  index.md
docs/click_reference/: README.md  ascii_table.md  call.md  casting.md  coil_out.md  coil_reset.md  coil_set.md  contact_compare.md  contact_edge_rise_fall.md  contact_nc.md  contact_no.md  copy_block.md  copy_fill.md  copy_pack.md  copy_single.md  copy_swap.md  copy_unpack.md  counters.md  data_compatibility.md  data_types.md  drum_event.md  drum_time.md  end.md  error_codes_plc.md  error_codes_programming.md  for.md  instruction_menu.md  interrupt_setup.md  math_advanced.md  math_decimal.md  math_hex.md  memory_addresses.md  next.md  pointer_addressing.md  reserved_chars.md  retentive_memory.md  return.md  scan_time.md  search.md  shift_register.md  (+3 more)
docs/dialects/: circuitpy-modbus.md  circuitpy.md  click-codegen.md  click-ladder-csv.md  click.md
docs/getting-started/: concepts.md  installation.md  new-concepts.md  new-quickstart.md  quickstart.md
docs/guides/: analysis.md  architecture.md  circuitpy-quickstart.md  click-cheatsheet.md  click-quickstart.md  commissioning.md  dap-vscode.md  forces-debug.md  ladder-logic.md  physical-harness.md  runner.md  tag-structures.md  testing.md  verification.md
docs/instructions/: coils.md  communication.md  conditions.md  copy.md  drum-shift-search.md  index.md  math.md  program-control.md  rungs.md  timers-counters.md
docs/internal/: assumption-audit.md  circuitpy-spec.md  debug-spec.md  dsl-strict-checker.md  prove-formal-foundations.md
docs/learn/: assignment.md  branches.md  counters.md  hardware.md  index.md  latch-reset.md  scan-cycle.md  state-machines.md  structured-tags.md  tags.md  testing.md  timers.md
examples/: __init__.py  bench.prof  circuitpy_board_switch_latch.py  circuitpy_codegen_review.py  circuitpy_conveyor.py  circuitpy_neopixel_traffic_light.py  circuitpy_retentive_runstop.py  circuitpy_traffic_light_modbus.py  circuitpy_traffic_light_modbus_output.py  click_conveyor.py  click_conveyor_annotated.py  click_email.py  click_starter.py  custom_math.py  example_dsl_program.py  fault_coverage.py  fill_station.py  packml_bench.py  sfc_howto.py  simple_task_example.py  state_machine.py  task_example.py  traffic_light.py
examples/learn/: __init__.py  assignment.py  branches.py  counters.py  hardware.py  latch_reset.py  scan_cycle.py  state_machines.py  structured_tags.py  tags.py  testing.py  timers.py
fixtures/coverage/: main.csv  sub_coverage_sub.csv
prompts/: codegen_or_prefix_extraction.md
scratch/: data-view-design.md
scratchpad/: IMPLEMENTATION_NOTES.md  INLINE-MATH-PLAN.md  P1AM-200_Modbus_CircuitPython_Research.md  PROMPT-circuitpython-modbus.md  SPEC.md  __init__.py  add-shift-register-plan.md  analysis-capabilities.md  bad_click_codegen_example.txt  battery-aware-runner-reset.md  bench_locals.py  bench_profile.py  bench_profile_fast.py  bench_replay.py  bench_tracked.py  causal-backlog.md  causal_chains_checklist.md  causal_chains_v1.2.md  circuitpython-codegen-prompt.md  circuitpython-codegen.md  circuitpython-validation.md  click-send-receive-v1-plan.md  click-soft-plc-adapter-plan.md  click-tagmap-plan.md  click-validation-stage-1-generic-walker-plan.md  click-validation-stage-2-click-policy-plan.md  click-validation-stage-3-facade-and-profile-plan.md  clickplc_dsl_original.md  code-reduction-opportunities.md  code.py  codegen-feature-complete.md  codegen-foundation.md  convert-struct-plan.md  custom-lambda-plan.md  dap-debug-adapter-plan.md  dataview-and-history-ergonomics.md  dataview-questions.txt  debug-api-next-steps.md  debug-dap-wiring.md  debug-force-plan.md  (+86 more)
scratchpad/elision/: concrete-batch-efficiency-plan.md  elision-checklist-v2.md  refactor-elision-passes.md  shared-baseline-batch.md  split_elision.py  state-key-elision-techniques-v3.md
scratchpad/examples/: batch_process.py  batch_process_click_addresses.cdv  batch_process_click_addresses.csv  demo_branch_subroutine.py  example_dsl_program.py  sfc_howto.py  state_machine.py  task_example.py  test_batch_process.py  test_sfc_howto.py
scratchpad/testing-additions/: README.md  autoharness-and-chaos.md  physical-realism.md  realism-backlog.md
spec/: HANDOFF.md  cleanup_plan.md  overview.md
spec/core/: debug.md  dsl.md  engine.md  instructions.md  types.md
spec/dialects/: click.md  cricket.md
src/pyrung/: __init__.py  cli.py  conditions.py  datatypes.py  dsl.py  dsl_implementation.py  dsl_v2.py  example.py  instructions.py  memory_model.py  (+7 more)
tests/: conftest.py  test_cli.py
(+443 files in other folders)
